--- a/sirius-web/src/styles.sass
+++ b/sirius-web/src/styles.sass
@@ -1,1 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+@import ./app/core/styles/variables.sass
+
+
+*
+  margin: 0
+  padding: 0
+
+body
+  width: 100%
+  height: 100vh
+
+
+.mat-tab-label
+  color: $color-white
+
+textarea:focus, input:focus, select:focus
+  box-shadow: 0 0 0 0
+  border: 0 none
+  outline: 0
+
+::-webkit-scrollbar-track
+    background-color: #F4F4F4
+    border-radius: 8px
+
+::-webkit-scrollbar
+    width: 8px
+    border-radius: 4px
+    background: #F4F4F4
+
+::-webkit-scrollbar-thumb
+    background: $color-primary
+    border-radius: 4px
